practica acabada, solo faltan botones, comentarios y bugs menores