@@ -34,12 +34,20 @@ public class SetWeatherEvent extends Event {
 	@Override
 	public String toString() {
 		StringBuilder str = new StringBuilder();
-		str.append("Change Weather: [");
 		
-		for (Pair<String, Weather> e : ws) {
-			str.append("(" + e.getFirst() + ", " + e.getSecond() + ")");
+		if (ws.size() > 1) {
+			str.append("Change Weather: [");
+			
+			for (int i = 0; i < ws.size() - 1; i++) {
+				str.append("(" + ws.get(i).getFirst() + ", " + ws.get(i).getSecond() + "), ");
+			}
+			
+			str.append("(" + ws.get(ws.size()-1).getFirst() + ", " + ws.get(ws.size() - 1).getSecond() + ")");
+			
+			str.append("]");
+		} else {
+			str.append("(" + ws.get(0).getFirst() + ", " + ws.get(0).getSecond() + ")");
 		}
-		str.append("]");
 		
 		
 		return str.toString();
